--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -11,9 +11,8 @@
 </div>
 <div
   id="HolidaysCalendar"
-  class="holiday-calendar"
+  class="holiday-calendar t-calendar"
   data-module="holidays-calendar"
-  data-holidays-path="<%= merged_holidays_path %>"
   data-new-holiday-path="<%= new_holiday_path %>"
   data-default-date="<%= Time.zone.now %>"
  ></div>
