--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -7,32 +7,58 @@
 <h1>Create a holiday</h1>
 
 <%= form_for @holiday, url: batch_create_holidays_path, layout: :basic do |f| %>
-  <%= f.text_field :title, class: 't-title' %>
-  <%=
-    f.text_field(
-      :date_range,
-      class: 't-date-range',
-      data: {
-        module: 'date-range-picker',
-        config: {
-          timePicker: true,
-          timePickerIncrement: 5,
-          locale: {
-            format: 'DD/MM/YYYY HH:mm'
+  <div data-module="holiday-types">
+    <%= f.radio_button :all_day, true, label: 'Create a multiple day holiday', class: 'js-show-all-day t-create-a-multiple-day-holiday' %>
+    <%= f.radio_button :all_day, false, label: 'Create a single day holiday', class: 'js-show-one-day t-create-a-single-day-holiday' %>
+
+    <%= f.text_field :title, class: 't-title' %>
+
+    <%=
+      f.text_field(
+        :date_range,
+        class: 't-all-day-date-range js-all-day',
+        data: {
+          module: 'date-range-picker',
+          config: {
+            locale: {
+              format: 'DD/MM/YYYY'
+            }
           }
         }
-      }
-    )
-  %>
-  <%=
-    f.select(
-      :users,
-      grouped_options_for_select(guider_options),
-      {},
-      multiple: 'multiple',
-      class: 't-users',
-      data: { module: 'advanced-select' },
-    )
-  %>
-  <%= f.submit 'Save', class: 't-save' %>
+      )
+    %>
+
+    <%=
+      f.text_field(
+        :date_range,
+        class: 't-one-day-date-range js-one-day',
+        data: {
+          module: 'date-range-picker',
+          config: {
+            timePicker: true,
+            timePickerIncrement: 5,
+            dateLimit: {
+              hours: 12
+            },
+            locale: {
+              format: 'DD/MM/YYYY HH:mm'
+            }
+          }
+        }
+      )
+    %>
+
+    <%=
+      f.select(
+        :users,
+        grouped_options_for_select(guider_options),
+        {},
+        multiple: 'multiple',
+        class: 't-users',
+        data: { module: 'advanced-select' },
+      )
+    %>
+
+    <%= f.submit 'Save', class: 't-save' %>
+  </div>
 <% end %>
