Improve look of quick-search across different browsers
- using bootstrap classes for form input

--- a/app/assets/stylesheets/components/_quick-search.scss
+++ b/app/assets/stylesheets/components/_quick-search.scss
@@ -1,9 +1,7 @@
-$quick-search-panel-width: 233px;
-
 .quick-search__dropdown {
   box-sizing: border-box;
   padding: 8px;
-  width: $quick-search-panel-width;
+  white-space: nowrap;
 }
 
 .quick-search__input {
