--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -50,7 +50,7 @@
     <form method="get" action="/appointments/search" class="form-inline">
       <div class="form-group quick-search__form-group">
         <label for="quick-search-input" class="quick-search__label"><span class="sr-only">Appointment ID or keyword</span>
-          <input type="text" id="quick-search-input" class="quick-search__input js-quick-search-input" name="search[q]" placeholder="Search">
+          <input type="text" id="quick-search-input" class="form-control input-sm quick-search__input js-quick-search-input" name="search[q]" placeholder="Search">
         </label>
       </div>
       <input type="submit" class="quick-search__button btn btn-primary btn-xs" value="Search">
