--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -27,6 +27,35 @@
   )
 %>
 
+<hr>
+<div class="row">
+  <div class="col-md-12">
+    <h2>Booking details</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-striped table-bordered">
+      <caption><span class="sr-only">Booking details</span></caption>
+      <thead>
+        <tr>
+          <th>Guider</th>
+          <th>Appointment date/time</th>
+          <th>Appointment created</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="t-guider"><%= @appointment.guider.name %></span></td>
+          <td><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <span class="t-appointment-date-time"><%= @appointment.start_at.to_date.to_s(:govuk_date_short) %>, <%= @appointment.start_at.to_s(:govuk_time) %> - <%= @appointment.end_at.to_s(:govuk_time) %></span></td>
+          <td><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> <span class="t-created-date"><%= @appointment.created_at.to_s(:govuk_date_short) %></span></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<hr>
+
 <%= form_for @appointment, layout: :basic do |f| %>
   <%= render partial: 'personal_details_form', locals: { f: f, edit: true } %>
   <div class="row form-group">
