Highlight search term in Javascript
- allow certain columns of the search results to
  have part of its contents replaced with a <mark>
  element to highlight a match

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -46,15 +46,15 @@
       <th width="1%">Actions</th>
     </tr>
   </thead>
-  <tbody class="list">
+  <tbody class="list" data-module="search-highlight">
     <% @results.each do |result| %>
       <% result = AppointmentSearchResultPresenter.new(result) %>
       <tr class="t-result">
-        <td class="t-id"><span class="id">#<%= result.id.html_safe %></span></td>
+        <td class="t-id"><span class="id js-allow-highlighting">#<%= result.id.html_safe %></span></td>
         <td><%= result.created_at %></td>
-        <td class="t-first-name"><%= result.first_name.html_safe %></td>
-        <td><%= result.last_name.html_safe %></td>
-        <td><%= result.guider_name.html_safe %></td>
+        <td class="t-first-name js-allow-highlighting"><%= result.first_name.html_safe %></td>
+        <td class="js-allow-highlighting"><%= result.last_name.html_safe %></td>
+        <td class="js-allow-highlighting"><%= result.guider_name.html_safe %></td>
         <td><%= result.date %></td>
         <td><%= result.status %></td>
         <td nowrap="true">
