Display a message if there is no activity on the 'My activity' page
- Previously if there was no activity, the page was looking rather
  empty

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -9,6 +9,13 @@
         <%= render(@activities, details: true) %>
       </div>
     </div>
+    <% if @activities.empty? %>
+      <div class="panel panel-default">
+        <div class="panel-body t-no-activity">
+          You have no activity
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
 
