--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,7 +1,7 @@
 <% if details %>
   <a class="activity list-group-item t-activity" href="<%= edit_appointment_path(activity.appointment) %>">
 <% else %>
-  <li class="activity list-group-item t-activity">
+  <li class="activity list-group-item t-activity" data-activity-id="<%= activity.id %>">
 <% end %>
     <div class="activity-details">
       <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
