--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -24,7 +24,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Guiders <span class="caret"></span></a>
     <ul class="dropdown-menu">
       <%= active_link_to 'Groups & schedules', users_path, wrap_tag: :li, active: :exclusive %>
-      <%= active_link_to 'Holidays & unavailability', holidays_path, wrap_tag: :li %>
+      <%= active_link_to 'Holidays', holidays_path, wrap_tag: :li %>
       <%= active_link_to 'Display order', sort_users_path, wrap_tag: :li %>
     </ul>
   </li>
