--- a/app/views/appointment_reports/new.html.erb
+++ b/app/views/appointment_reports/new.html.erb
@@ -3,32 +3,44 @@
 <h1>Generate an appointment report</h1>
 
 <%= form_for @appointment_report, method: 'GET', target: '_blank', 'data-disable-with': nil, layout: :basic do |f| %>
-  <%=
-    f.select(
-      :where,
-      options_for_select(@where_options),
-      {},
-      class: 't-where',
-      data: { module: 'advanced-select', config: { allowClear: false } }
-    )
-  %>
-  <%=
-    f.text_field(
-      :date_range,
-      class: 't-date-range',
-      label: 'Is in date range',
-      data: {
-	module: 'date-range-picker',
-	config: {
-	  autoUpdateInput: false,
-	  locale: {
-	    cancelLabel: 'Clear',
-	    format: 'DD/MM/YYYY'
-	  }
-	}
-      }
-    )
-  %>
-  <% # Use manual html here so that data-disable-with isn't added. %>
-  <input type="submit" name="commit" value="Download" class="t-download btn btn-primary">
+  <div class="row">
+    <div class="col-md-4">
+      <%=
+        f.select(
+          :where,
+          options_for_select(@where_options),
+          {},
+          class: 't-where',
+          data: { module: 'advanced-select', config: { allowClear: false } }
+        )
+      %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <%=
+        f.text_field(
+          :date_range,
+          class: 't-date-range',
+          label: 'Is in date range',
+          data: {
+            module: 'date-range-picker',
+            config: {
+              autoUpdateInput: false,
+              locale: {
+                cancelLabel: 'Clear',
+                format: 'DD/MM/YYYY'
+              }
+            }
+          }
+        )
+      %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <% # Use manual html here so that data-disable-with isn't added. %>
+      <input type="submit" name="commit" value="Download" class="t-download btn btn-primary">
+    </div>
+  </div>
 <% end %>
