Altered schedule edit/new save button to be primary button
- to be consistent with other forms on the app

--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -62,5 +62,5 @@
   </div>
 
   <%= f.hidden_field :slots, class: 'slots-data', value: @slots_as_json %>
-  <%= f.submit 'Save', class: 'btn btn-success js-save t-save' %>
+  <%= f.submit 'Save', class: 'btn btn-primary js-save t-save' %>
 <% end %>
