Add autoApply: true to any date pickers without time selection
- When you select a date range it's nicer to close the date
  input dialog automatically so you can complete the form quicker

--- a/app/views/appointment_reports/new.html.erb
+++ b/app/views/appointment_reports/new.html.erb
@@ -27,6 +27,7 @@
             module: 'date-range-picker',
             config: {
               autoUpdateInput: false,
+              autoApply: true,
               locale: {
                 cancelLabel: 'Clear',
                 format: 'DD/MM/YYYY'
