--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -19,6 +19,7 @@
           module: 'date-range-picker',
           config: {
             autoUpdateInput: false,
+            autoApply: true,
             locale: {
               cancelLabel: 'Clear',
               format: 'DD/MM/YYYY'
