--- a/app/views/utilisation_reports/new.html.erb
+++ b/app/views/utilisation_reports/new.html.erb
@@ -13,6 +13,7 @@
           data: {
             module: 'date-range-picker',
             config: {
+              autoApply: true,
               locale: {
                 format: 'DD/MM/YYYY'
               }
