--- a/app/views/appointment_mailer/updated.html.erb
+++ b/app/views/appointment_mailer/updated.html.erb
@@ -1,39 +1,138 @@
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px;line-height: 1.315789474;">Dear <%= @appointment.first_name %>,</p>
+<h1 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  Your appointment has been changed
+</h1>
 
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin:
-15px 0;font-size: 16px;line-height: 1.315789474;">Your appointment details were updated.</p>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Dear <%= @appointment.first_name %>,
+</p>
 
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px;line-height: 1.315789474;">Thank you for booking an
-appointment with Pension Wise. We can confirm your appointment will be at <%=
-@appointment.start_at.to_s(:govuk_date) %>. The appointment will be with <%= @appointment.guider.name %>.</p>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  You asked us to change your telephone guidance appointment with Pension Wise. Your new appointment is confirmed for:
+</p>
 
-<h3 style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif">Preparing for your appointment</h3>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Date
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+  </strong>
+</p>
 
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px;line-height: 1.315789474;">To make your appointment as useful
-as possible, it would be helpful to know the following information:</p>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Start time
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+  </strong>
+</p>
 
-<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px">
-  <li>the value of your pension pot(s) - check your pension paperwork or ask your provider</li>
-  <li>an estimate of your State Pension - call the Future Pension Centre on 0345 600 4274 for a State Pension statement</li>
-  <li>any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider</li>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Appointment lasts
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    <%= ((@appointment.end_at - @appointment.start_at) / 1.minutes).round %> minutes
+  </strong>
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Your contact number
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    <%= @appointment.phone %>
+  </strong>
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Your memorable word
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    <%= @appointment.memorable_word(obscure: true) %>
+  </strong>
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Your reference number
+  <br>
+  <strong class="emphasize" style="font-size: 24px;">
+    #<%= @appointment.id %>
+  </strong>
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  A trained guidance specialist will call you on the number above. They'll repeat the
+  memorable word to you so you know you're speaking to Pension Wise.
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  <strong>
+    If you don't answer the call, you'll need to book another appointment.
+  </strong>
+</p>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  To cancel or change your appointment, or if any of the information above isn't correct,
+  call 0800 138 3944 or reply to this email.
+</p>
+
+
+<table class="separator" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 100%;height: 1px;line-height: 1px;font-size: 1px;">
+  <tr>
+    <td style="padding: 0 0 0 15px;border-collapse: collapse;background: none;border-top: solid 1px #bfc1c3;border-width: 1px 0 0 0;height: 1px;line-height: 1px;font-size: 1px;width: 100%;">
+      <!-- -->
+    </td>
+  </tr>
+</table>
+
+<h1 style="color: #0B0C0C !important;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  Preparing for your appointment
+</h1>
+
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  To make your appointment as useful as possible, it would be helpful to know the following information:
+</p>
+
+
+<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      the value of your pension pot(s) - check your pension paperwork or ask your provider
+    </p>
+  </li>
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      an estimate of your State Pension - call the Future Pension Centre on 0345 600 4274 for a State Pension statement
+    </p>
+  </li>
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider
+    </p>
+  </li>
 </ul>
 
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px;line-height: 1.315789474;"> Think about your financial
-circumstances in general and plans for retirement, eg: </p>
+<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+  Think about your financial circumstances in general and plans for retirement, eg:
+</p>
 
-<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px">
-  <li>sources of income like salary, benefits, savings, investments</li>
-  <li>debts and repayments you might have</li>
-  <li>when you want to stop working</li>
-  <li>if you want a fixed or flexible income in retirement</li>
+<ul style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      sources of income like salary, benefits, savings, investments
+    </p>
+  </li>
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      debts and repayments you might have
+    </p>
+  </li>
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      when you want to stop working
+    </p>
+  </li>
+  <li>
+    <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
+      if you want a fixed or flexible income in retirement
+    </p>
+  </li>
 </ul>
-
-<p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px
-0;font-size: 16px;line-height: 1.315789474;">You may be asked for your booking 
-reference number, #<%= @appointment.id %>.</p>
