--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -1,29 +1,45 @@
-Dear <%= @appointment.name %>,
+Your appointment has been changed
 
-Your appointment details were updated.
+Dear <%= @appointment.first_name %>,
 
-Thank you for booking an appointment with Pension Wise. We can confirm your
-appointment will be at <%= @appointment.start_at.to_s(:govuk_date) %>. The
-appointment will be with <%= @appointment.guider.name %>.
+You asked us to change your telephone guidance appointment with Pension Wise. Your new appointment is confirmed for:
+
+Date
+<%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+
+Start time
+<%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+
+Appointment lasts
+<%= ((@appointment.end_at - @appointment.start_at) / 1.minutes).round %> minutes
+
+Your contact number
+<%= @appointment.phone %>
+
+Your memorable word
+<%= @appointment.memorable_word(obscure: true) %>
+
+Your reference number
+#<%= @appointment.id %>
+
+A trained guidance specialist will call you on the number above. They'll repeat the
+memorable word to you so you know you're speaking to Pension Wise.
+
+If you don't answer the call, you'll need to book another appointment.
+
+To cancel or change your appointment, or if any of the information above isn't correct,
+call 0800 138 3944 or reply to this email.
 
 Preparing for your appointment
 
-To make your appointment as useful as possible, it would be helpful to know the
-following information:
+To make your appointment as useful as possible, it would be helpful to know the following information:
+  - the value of your pension pot(s) - check your pension paperwork or ask your provider
+  - an estimate of your State Pension - call the Future Pension Centre on 0345 600 4274 for a State Pension statement
+  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider
 
-* the value of your pension pot(s) - check your pension paperwork or ask your
-  provider
-* an estimate of your State Pension - call the Future Pension Centre on
-  0345 600 4274 for a State Pension statement
-* any special arrangements attached to your pension pot, eg a guaranteed
-  annuity rate or a guaranteed pot value at a certain time - ask your provider
+Think about your financial circumstances in general and plans for retirement, eg:
 
-Think about your financial circumstances in general and plans for retirement,
-eg:
-
-* sources of income like salary, benefits, savings, investments
-* debts and repayments you might have
-* when you want to stop working
-* if you want a fixed or flexible income in retirement
-
-You may be asked for your booking reference number, #<%= @appointment.id %>.
+  - sources of income like salary, benefits, savings, investments
+  - debts and repayments you might have
+  - when you want to stop working
+  - if you want a fixed or flexible income in retirement
