--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -10,5 +10,5 @@
   data-default-date="<%= BookableSlot.next_valid_start_date %>"
 ></div>
 <input type="hidden" name="available-slots-json" class="slots-data" value="<%= @available_slots_json %>">
-<%= form.hidden_field :start_at, data: { 'selected-start': true }, class: 't-start-at' %>
-<%= form.hidden_field :end_at, data: { 'selected-end': true }, class: 't-end-at' %>
+<%= form.hidden_field :start_at, class: 't-start-at js-selected-start' %>
+<%= form.hidden_field :end_at, class: 't-end-at js-selected-end' %>
