Hardcode appointment duration to 45 minutes
Although we have 70 minute appointments in the database, the customer's
appointment is only 45 minutes. We allow for more time so the guider has
time to prepare either side.

--- a/app/views/appointment_mailer/updated.html.erb
+++ b/app/views/appointment_mailer/updated.html.erb
@@ -30,7 +30,7 @@
   Appointment lasts
   <br>
   <strong class="emphasize" style="font-size: 24px;">
-    <%= ((@appointment.end_at - @appointment.start_at) / 1.minutes).round %> minutes
+    45 minutes
   </strong>
 </p>
 
