--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -7,8 +7,7 @@
   class="appointment-availability-calendar"
   data-module="appointment-availability-calendar"
   data-available-slots-path="<%= available_bookable_slots_path %>"
-  data-default-date="<%= BookableSlot.next_valid_start_date %>"
+  data-default-date="<%= BookableSlot.next_valid_start_date(current_user) %>"
 ></div>
-<input type="hidden" name="available-slots-json" class="slots-data" value="<%= @available_slots_json %>">
 <%= form.hidden_field :start_at, class: 't-start-at js-selected-start' %>
 <%= form.hidden_field :end_at, class: 't-end-at js-selected-end' %>
