--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -63,9 +63,11 @@
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             <span class="sr-only">Edit appointment</span>
           <% end %>
-          <%= link_to appointment_reschedule_path(result), title: 'Reschedule appointment', class: 'btn btn-info' do %>
-            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-            <span class="sr-only">Reschedule appointment</span>
+          <% if result.can_be_rescheduled_by?(current_user) %>
+            <%= link_to appointment_reschedule_path(result), title: 'Reschedule appointment', class: 'btn btn-info' do %>
+              <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+              <span class="sr-only">Reschedule appointment</span>
+            <% end %>
           <% end %>
           <%= link_to new_appointment_path(copy_from: result), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
             <span class="glyphicon glyphicon-copy" aria-hidden="true"></span>
