Change 'Rebook' icon to more of a repeat symbol

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     <% end %>
     <%= link_to new_appointment_path(copy_from: @appointment), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
-      <span class="glyphicon glyphicon-copy" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
       <span>Rebook</span>
     <% end %>
   </div>
