--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -70,7 +70,7 @@
             <% end %>
           <% end %>
           <%= link_to new_appointment_path(copy_from: result), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
-            <span class="glyphicon glyphicon-copy" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
             <span class="sr-only">Rebook appointment</span>
           <% end %>
         </td>
