--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,7 @@
           <th><label for="select-all"><input type="checkbox" id="select-all" class="select-all js-multi-checkbox-all"> <span class="sr-only">Select All</span></label></th>
           <th><span class="sort" data-sort="name">Name</span></th>
           <th>Groups</th>
+          <th>Active</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -41,7 +42,33 @@
                 <span class="label label-info <%= dom_id(group) %> t-group"><%= group.name %></span>
               <% end %>
             </td>
-            <td nowrap="true"><%= link_to "/groups?user_ids=#{guider.id}", title: "Manage groups for #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-tag" aria-hidden="true"></span><span class="sr-only">Manage groups for #{guider.name}</span><% end %> <%= link_to edit_user_path(guider), title: "Manage schedules for #{guider.name}", class: 'btn btn-info' do %><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span><span class="sr-only">Manage schedules for #{guider.name}</span><% end %></td>
+            <td>
+              <% if guider.active? %>
+                <span class="glyphicon glyphicon-ok t-active-icon" aria-hidden="true"></span>
+                <span class="sr-only">Guider is active</span>
+              <% end %>
+            </td>
+            <td nowrap="true">
+              <%= link_to "/groups?user_ids=#{guider.id}", title: "Manage groups for #{guider.name}", class: 'btn btn-info' do %>
+                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                <span class="sr-only">Manage groups for #{guider.name}</span>
+              <% end %>
+              <%= link_to edit_user_path(guider), title: "Manage schedules for #{guider.name}", class: 'btn btn-info' do %>
+                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                <span class="sr-only">Manage schedules for #{guider.name}</span>
+              <% end %>
+              <% if guider.active %>
+                <%= link_to user_deactivate_path(guider), method: 'PATCH', title: "Deactivate #{guider.name}", class: 'btn btn-danger t-deactivate', 'data-confirm': 'Are you sure you want to deactivate this guider?' do %>
+                  <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+                  <span class="sr-only">Deactivate #{guider.name}</span>
+                <% end %>
+              <% else %>
+                <%= link_to user_activate_path(guider), method: 'PATCH', title: "Activate #{guider.name}", class: 'btn btn-danger t-activate', 'data-confirm': 'Are you sure you want to activate this guider?' do %>
+                  <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+                  <span class="sr-only">Activate #{guider.name}</span>
+                <% end %>
+              <% end %>
+              </td>
           </tr>
         <% end %>
       </tbody>
