Upgrade full calendar to latest version
- Fullcalendar 3.0.1 -> 3.10
  Full list of additions/fixes here
  https://github.com/fullcalendar/fullcalendar/releases
- Fullcalendar Scheduler 1.4 -> 1.5
  Full list of additiona/fixes here
  https://github.com/fullcalendar/fullcalendar-scheduler/releases
- Fix override for today background colouring

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -177,7 +177,7 @@ $guider-row-height: 120px;
 }
 
 .fc-unthemed {
-  .fc-today {
+  td.fc-today { // scss-lint:disable QualifyingElement
     background: $calendar-today-background;
   }
 
