Better copy for activity messages
- Use 'The system' as an activity owner where appropriate
- Give activity views control to render the owner
- Better copy for appointment reminder activity

--- a/app/views/activities/_assignment_activity.html.erb
+++ b/app/views/activities/_assignment_activity.html.erb
@@ -1,4 +1,12 @@
 <% content_for(:activity_message, flush: true) do %>
-  <%= assignment_activity.message %>
+  <% if assignment_activity.allocated? %>
+    <strong>The system</strong>
+    assigned this appointment to
+    <strong><%= assignment_activity.owner.name %></strong>
+  <% else %>
+    <strong><%= assignment_activity.user_name %></strong>
+    allocated this appointment to
+    <strong><%= assignment_activity.owner.name %></strong>
+  <% end %>
 <% end %>
 <%= render 'activities/activity', activity: assignment_activity, details: details %>
