--- a/app/views/activities/_reminder_activity.html.erb
+++ b/app/views/activities/_reminder_activity.html.erb
@@ -1,4 +1,6 @@
 <% content_for(:activity_message, flush: true) do %>
-  <%= reminder_activity.message %> to <%= reminder_activity.owner.name %>
+  <strong>The system</strong>
+  sent an appointment reminder email to
+  <strong><%= reminder_activity.appointment.name %></strong>
 <% end %>
 <%= render 'activities/activity', activity: reminder_activity, details: details %>
