Icons for each activity type

--- a/app/views/activities/_assignment_activity.html.erb
+++ b/app/views/activities/_assignment_activity.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
+  <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
   <% if assignment_activity.allocated? %>
     <strong>The system</strong>
     assigned this appointment to
