--- a/app/views/activities/_create_activity.html.erb
+++ b/app/views/activities/_create_activity.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
+  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
   <strong><%= create_activity.user_name %></strong>
   created this appointment
 <% end %>
