--- a/app/views/activities/_reminder_activity.html.erb
+++ b/app/views/activities/_reminder_activity.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
+  <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
   <strong>The system</strong>
   sent an appointment reminder email to
   <strong><%= reminder_activity.appointment.name %></strong>
