--- a/app/views/activities/_audit_activity.html.erb
+++ b/app/views/activities/_audit_activity.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
+  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   <strong><%= audit_activity.user_name %></strong>
   changed the <%= audit_activity.message %>
 <% end %>
