--- a/app/views/activities/_message_activity.html.erb
+++ b/app/views/activities/_message_activity.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
+  <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
   <strong><%= message_activity.user_name %></strong>
   said <em><%= message_activity.message %></em>
 <% end %>
