Adding a no-js message
- hiding search and selection form elements from nojs browsers
- adding enable JS message for nojs browsers across various pages

--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -2,6 +2,8 @@
 
 <h1 class="sr-only">Allocations</h1>
 
+<%= render 'shared/nojs' %>
+
 <div class="alert alert--fixed alert-success js-saved-changes t-saved-changes" role="alert" style="display:none;">
   <span class="glyphicon glyphicon-ok"></span> Changes saved.
 </div>
