--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -2,6 +2,8 @@
 <% if @appointment.errors[:guider].any? %>
   <%= render 'unable_to_assign' %>
 <% end %>
+
+<%= render 'shared/nojs' %>
 <div
   id="AppointmentAvailabilityCalendar"
   class="appointment-availability-calendar"
