--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -5,6 +5,8 @@
 <div class="fullscreen-calendar">
   <%= render 'shared/calendar_filter' %>
 
+  <%= render 'shared/nojs' %>
+
   <div
     id="CompanyCalendar"
     class="company-calendar js-calendar js-calendar-reload-on-events t-calendar"
