--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -9,6 +9,9 @@
   <% end %>
   </div>
 </div>
+
+<%= render 'shared/nojs' %>
+
 <div
   id="HolidaysCalendar"
   class="holiday-calendar t-calendar"
