--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -58,6 +58,7 @@
     </div>
   </div>
   <div class="form-group">
+    <%= render 'shared/nojs' %>
     <div id="GuiderSlotPickerCalendar" data-module="guider-slot-picker-calendar" data-events=".slots-data" data-events-common="calendar-common" data-config='{"slotDurationMinutes": 70}'></div>
   </div>
 
