--- a/app/views/users/sort.html.erb
+++ b/app/views/users/sort.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Guider display order</h1>
 
+<%= render 'shared/nojs' %>
+
 <p>
   Drag guiders around to control the order they are displayed on the <a href="<%= allocations_path %>">Allocations Calendar</a>.
 </p>
