Describe appointment length consistently
The content team have expressed a desire for this to be detailed
consistently across the service.

--- a/app/views/appointment_mailer/reminder.text.erb
+++ b/app/views/appointment_mailer/reminder.text.erb
@@ -12,7 +12,7 @@ Start time
 <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
 Appointment lasts
-45 minutes
+45 to 60 minutes
 
 Your contact number
 <%= @appointment.phone %>
