--- a/app/views/appointment_mailer/updated.html.erb
+++ b/app/views/appointment_mailer/updated.html.erb
@@ -30,7 +30,7 @@
   Appointment lasts
   <br>
   <strong class="emphasize" style="font-size: 24px;">
-    45 minutes
+    45 to 60 minutes
   </strong>
 </p>
 
