--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -12,7 +12,7 @@ Your appointment is confirmed for:
     <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
   Appointment lasts
-    45 minutes
+    45 to 60 minutes
 
   Your contact number
     <%= @appointment.phone %>
