--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -11,7 +11,7 @@ Start time
 <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
 Appointment lasts
-45 minutes
+45 to 60 minutes
 
 Your contact number
 <%= @appointment.phone %>
