--- a/app/views/appointment_mailer/updated.html.erb
+++ b/app/views/appointment_mailer/updated.html.erb
@@ -19,7 +19,7 @@
 </p>
 
 <p style="color: #0B0C0C;font-family: Helvetica, Arial, sans-serif;margin: 15px 0;font-size: 16px;line-height: 1.315789474;">
-  Start time
+  Time
   <br>
   <strong class="emphasize" style="font-size: 24px;">
     <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
