--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -8,7 +8,7 @@ Your appointment is confirmed for:
   Date
     <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
 
-  Start time
+  Time
     <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
   Appointment lasts
@@ -23,25 +23,26 @@ Your appointment is confirmed for:
   Your reference number
     #<%= @appointment.id %>
 
-  A trained guidance specialist will call you on the number above. They'll repeat the
-  memorable word to you so you know you're speaking to Pension Wise.
+A trained guidance specialist will call you on the number above. They'll repeat the
+memorable word to you so you know you're speaking to Pension Wise.
 
-    If you don't answer the call, you'll need to book another appointment.
+If you don't answer the call, you'll need to book another appointment.
 
-  To cancel or change your appointment, or if any of the information above isn't correct,
-  call 0800 138 3944 or reply to this email.
+To cancel or change your appointment, or if any of the information above isn't correct,
+call 0800 138 3944 or reply to this email.
 
-  Preparing for your appointment
+Preparing for your appointment
 
 To make your appointment as useful as possible, it would be helpful to know the following information:
 
   - the value of your pension pot(s) - check your pension paperwork or ask your provider
   - an estimate of your State Pension - call the Future Pension Centre on 0345 3000 168 for a State Pension statement
-  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider
+  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at
+    a certain time - ask your provider
 
 Think about your financial circumstances in general and plans for retirement, eg:
 
-- sources of income like salary, benefits, savings, investments
-- debts and repayments you might have
-- when you want to stop working
-- if you want a fixed or flexible income in retirement
+  - sources of income like salary, benefits, savings, investments
+  - debts and repayments you might have
+  - when you want to stop working
+  - if you want a fixed or flexible income in retirement
