--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -2,25 +2,26 @@ Your appointment has been changed
 
 Dear <%= @appointment.first_name %>,
 
-You asked us to change your telephone guidance appointment with Pension Wise. Your new appointment is confirmed for:
+You asked us to change your telephone guidance appointment with Pension Wise.
+Your new appointment is confirmed for:
 
-Date
-<%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+  Date
+    <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
 
-Start time
-<%= @appointment.start_at.to_time.to_s(:govuk_time) %>
+  Time
+    <%= @appointment.start_at.to_time.to_s(:govuk_time) %>
 
-Appointment lasts
-45 to 60 minutes
+  Appointment lasts
+    45 to 60 minutes
 
-Your contact number
-<%= @appointment.phone %>
+  Your contact number
+    <%= @appointment.phone %>
 
-Your memorable word
-<%= @appointment.memorable_word(obscure: true) %>
+  Your memorable word
+    <%= @appointment.memorable_word(obscure: true) %>
 
-Your reference number
-#<%= @appointment.id %>
+  Your reference number
+    #<%= @appointment.id %>
 
 A trained guidance specialist will call you on the number above. They'll repeat the
 memorable word to you so you know you're speaking to Pension Wise.
@@ -33,9 +34,11 @@ call 0800 138 3944 or reply to this email.
 Preparing for your appointment
 
 To make your appointment as useful as possible, it would be helpful to know the following information:
+
   - the value of your pension pot(s) - check your pension paperwork or ask your provider
   - an estimate of your State Pension - call the Future Pension Centre on 0345 3000 168 for a State Pension statement
-  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at a certain time - ask your provider
+  - any special arrangements attached to your pension pot, eg a guaranteed annuity rate or a guaranteed pot value at
+    a certain time - ask your provider
 
 Think about your financial circumstances in general and plans for retirement, eg:
 
